Fix weather API for GitHub Pages

--- a/Class6/wetherApi.html
+++ b/Class6/wetherApi.html
@@ -199,15 +199,8 @@
     <script>
 
         // API Configuration
-        // Check if running on Netlify (deployed) or locally
-        const isNetlify = window.location.hostname.includes('netlify.app') || window.location.hostname.includes('netlify.com');
-
-        // For LOCAL testing: put your key here (remove before pushing to GitHub!)
-        const LOCAL_API_KEY = '';
-
-        // API URLs
-        const NETLIFY_URL = '/.netlify/functions/weather';
-        const DIRECT_URL = 'https://api.openweathermap.org/data/2.5/weather';
+        const API_KEY = '57b9dea7c9029726ba414508c1d76790';
+        const API_URL = 'https://api.openweathermap.org/data/2.5/weather';
 
         // Get HTML elements
         const cityInput = document.getElementById('cityInput');
@@ -238,14 +231,8 @@
             showLoading();
 
             try {
-                // Use Netlify function on deployed site, direct API locally
-                let url;
-                if (isNetlify) {
-                    url = `${NETLIFY_URL}?city=${encodeURIComponent(city)}`;
-                } else {
-                    url = `${DIRECT_URL}?q=${city}&appid=${LOCAL_API_KEY}&units=metric`;
-                }
-
+                // Fetch weather data
+                const url = `${API_URL}?q=${city}&appid=${API_KEY}&units=metric`;
                 const response = await fetch(url);
 
                 if (!response.ok) {
