--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>© 2026 Dhruva Maheshwari | All projects made with ❤️</p>
+        <p>Created By Dhruva Maheshwari </p>
     </footer>
 </body>
 
